--- a/Animations.ipynb
+++ b/Animations.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "## Picture 1\n",
     "![Figure_x](beach-boat.jpg)\n",
-    "![Figure_x](test1.gif)"
+    "![Figure_x](test1.gif)\n",
+    "![Figure_x](giphy.gif)"
    ]
   }
  ],
