--- a/Animations.ipynb
+++ b/Animations.ipynb
@@ -5,10 +5,54 @@
    "id": "378f53e8-ba98-463b-a59f-f59f5a2947c3",
    "metadata": {},
    "source": [
-    "## Picture 1\n",
+    "# Variable injection\n",
+    "### (Figure 5.2 & 5.3) \n",
     "\n",
-    "![Figure_x](giphy.gif)"
+    "#### Case 25\n",
+    "![Figure_x](giphy.gif)\n",
+    "\n",
+    "#### Case 55\n",
+    "![Figure_x](giphy.gif)\n",
+    "\n",
+    "#### Case 85\n",
+    "![Figure_x](giphy.gif)\n",
+    "\n",
+    "\n",
+    "# Variable shale\n",
+    "### (Figure 5.4 & 5.5) \n",
+    "\n",
+    "#### Case 108\n",
+    "![Figure_x](giphy.gif)\n",
+    "\n",
+    "#### Case 116\n",
+    "![Figure_x](giphy.gif)\n",
+    "\n",
+    "#### Case 120\n",
+    "![Figure_x](giphy.gif)\n",
+    "\n",
+    "#### Case 124\n",
+    "![Figure_x](giphy.gif)\n",
+    "\n",
+    "# Unseen / Untrained structures\n",
+    "### (Figure 5.11 & 5.12) \n",
+    "\n",
+    "#### Reservoir A\n",
+    "![Figure_x](giphy.gif)\n",
+    "\n",
+    "#### Reservoir B\n",
+    "![Figure_x](giphy.gif)\n",
+    "\n",
+    "#### Reservoir C\n",
+    "![Figure_x](giphy.gif)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04e002c7-da6e-4a28-a50e-862129b9f501",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
