--- a/Animations.ipynb
+++ b/Animations.ipynb
@@ -5,45 +5,58 @@
    "id": "378f53e8-ba98-463b-a59f-f59f5a2947c3",
    "metadata": {},
    "source": [
+    "This webpage shows the results accompanying the figures in the thesis (CCS Reservoir \n",
+    "Simulation usin \r\n",
+    "Graph Neur l\r\n",
+    "Networks, retrievable at https://repository.tudelft.n. Contact: ljjveeger@gmail.coml/)\n",
+    "\n",
     "# Variable injection\n",
     "### (Figure 5.2 & 5.3) \n",
     "\n",
     "#### Case 25\n",
-    "![Figure_x](giphy.gif)\n",
+    "![Figure_x](case25_ep99_dpi100_iterated_start0_end144.gif)\n",
     "\n",
     "#### Case 55\n",
-    "![Figure_x](giphy.gif)\n",
+    "![Figure_x](case55_ep99_dpi100_iterated_start0_end144.gif)\n",
     "\n",
     "#### Case 85\n",
-    "![Figure_x](giphy.gif)\n",
+    "![Figure_x](case85_ep99_dpi100_iterated_start0_end144.gif)\n",
     "\n",
     "\n",
     "# Variable shale\n",
     "### (Figure 5.4 & 5.5) \n",
     "\n",
     "#### Case 108\n",
-    "![Figure_x](giphy.gif)\n",
+    "![Figure_x](case108_ep135_dpi100_iterated_start0_end160.gif)\n",
     "\n",
     "#### Case 116\n",
-    "![Figure_x](giphy.gif)\n",
+    "![Figure_x](case116_ep135_dpi100_iterated_start0_end160.gif)\n",
     "\n",
     "#### Case 120\n",
-    "![Figure_x](giphy.gif)\n",
+    "![Figure_x](case120_ep135_dpi100_iterated_start0_end160.gif)\n",
     "\n",
     "#### Case 124\n",
-    "![Figure_x](giphy.gif)\n",
+    "![Figure_x](case124_ep135_dpi100_iterated_start0_end160.gif)\n",
+    "\n",
+    "# Value bounce \n",
+    "In the roll-out animation the value bounc described in the thesis (section 5.5.1)ing can clearly be observed. \n",
+    "### (Simulation corresponding to data from Figure 5.8)\n",
+    "![Figure_x](case112_ep159_dpi100_iterated_start0_end160.gif)\n",
     "\n",
     "# Unseen / Untrained structures\n",
     "### (Figure 5.11 & 5.12) \n",
     "\n",
     "#### Reservoir A\n",
-    "![Figure_x](giphy.gif)\n",
+    "![Figure_x](case141_ep135_dpi100_iterated_start0_end144.gif)\n",
     "\n",
     "#### Reservoir B\n",
-    "![Figure_x](giphy.gif)\n",
+    "![Figure_x](case142_ep135_dpi100_iterated_start0_end144.gif)\n",
     "\n",
     "#### Reservoir C\n",
-    "![Figure_x](giphy.gif)\n"
+    "![Figure_x](case143_ep135_dpi100_iterated_start0_end144.gif)\n",
+    "\n",
+    "\n",
+    "Contact: ljjveeger@gmail.com\n"
    ]
   },
   {
