--- a/Animations.ipynb
+++ b/Animations.ipynb
@@ -23,7 +23,8 @@
     "![Figure_x](case85_ep99_dpi100_iterated_start0_end144.gif)\n",
     "\n",
     "\n",
-    "# Variable alesh\n",
+    "# Variable shale\n",
+    "F\n",
     "For illustrative purposes, the post-injection phase (>12 years) is included in these animations. See discussion in section 4.4.3, 5.5.2 and 6.2 for more details on this part of the simulation and why it is not yet captured properlyle\n",
     "### (Figure 5.4 & 5.5) \n",
     "\n",
