final final final

--- a/Animations.ipynb
+++ b/Animations.ipynb
@@ -5,10 +5,7 @@
    "id": "378f53e8-ba98-463b-a59f-f59f5a2947c3",
    "metadata": {},
    "source": [
-    "This webpage shows the results accompanying the figures in the thesis (CCS Reservoir \n",
-    "Simulation usin \r\n",
-    "Graph Neur l\r\n",
-    "Networks, retrievable at https://repository.tudelft.n. Contact: ljjveeger@gmail.coml/)\n",
+    "This webpage shows the results accompanying the figures in the thesis (CCS Reservoir Simulation using Graph Neural Networks, retrievable at https://repository.tudelft.nl/). Contact: ljjveeger@gmail.com\n",
     "\n",
     "# Variable injection\n",
     "### (Figure 5.2 & 5.3) \n",
@@ -24,8 +21,7 @@
     "\n",
     "\n",
     "# Variable shale\n",
-    "F\n",
-    "For illustrative purposes, the post-injection phase (>12 years) is included in these animations. See discussion in section 4.4.3, 5.5.2 and 6.2 for more details on this part of the simulation and why it is not yet captured properlyle\n",
+    "For illustrative purposes, the post-injection phase (>12 years) is included in these animations. See discussion in section 4.4.3, 5.5.2 and 6.2 for more details on this part of the simulation and why it is not yet captured properly. \n",
     "### (Figure 5.4 & 5.5) \n",
     "\n",
     "#### Case 108\n",
@@ -41,7 +37,7 @@
     "![Figure_x](case124_ep135_dpi100_iterated_start0_end160.gif)\n",
     "\n",
     "# Value bounce \n",
-    "In the roll-out animation the value bounc described in the thesis (section 5.5.1)ing can clearly be observed. \n",
+    "In the roll-out animation the value bouncing described in the thesis (section 5.5.1) can clearly be observed. \n",
     "### (Simulation corresponding to data from Figure 5.8)\n",
     "![Figure_x](case112_ep159_dpi100_iterated_start0_end160.gif)\n",
     "\n",
@@ -58,7 +54,8 @@
     "![Figure_x](case143_ep135_dpi100_iterated_start0_end144.gif)\n",
     "\n",
     "\n",
-    "Contact: ljjveeger@gmail.com\n"
+    "Contact: ljjveeger@gmail.com\n",
+    "m\n"
    ]
   },
   {
